doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Users/Shawn/Dev/Greenfoot 3.0.1/Greenfoot.app/Contents/Frameworks/jdk.framework/Versions/A/Contents/Home/bin/javadoc
-author
-version
-nodeprecated
-protected
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/Users/Shawn/Dev/Greenfoot 3.0.1/Greenfoot.app/Contents/Resources/Java/extensions/greenfoot.jar:/Users/Shawn/Dev/Greenfoot 3.0.1/Greenfoot.app/Contents/Resources/Java/bluejcore.jar:/Users/Shawn/Dev/Greenfoot 3.0.1/Greenfoot.app/Contents/Resources/Java/bluejeditor.jar:/Users/Shawn/Dev/Greenfoot 3.0.1/Greenfoot.app/Contents/Resources/Java/bluejext.jar:/Users/Shawn/Dev/Greenfoot 3.0.1/Greenfoot.app/Contents/Resources/Java/AppleJavaExtensions.jar:/Users/Shawn/Dev/Greenfoot 3.0.1/Greenfoot.app/Contents/Resources/Java/junit-4.11.jar:/Users/Shawn/Dev/Greenfoot 3.0.1/Greenfoot.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/Users/Shawn/Dev/Greenfoot 3.0.1/Greenfoot.app/Contents/Resources/Java/bluej.jar:/Users/Shawn/Dev/Greenfoot 3.0.1/Greenfoot.app/Contents/Resources/Java/commons-httpclient-3.1.jar:/Users/Shawn/Dev/Greenfoot 3.0.1/Greenfoot.app/Contents/Resources/Java/commons-logging-api-1.1.2.jar:/Users/Shawn/Dev/Greenfoot 3.0.1/Greenfoot.app/Contents/Resources/Java/commons-codec-1.3.jar:/Users/Shawn/Dev/Greenfoot 3.0.1/Greenfoot.app/Contents/Resources/Java/jl1.0.1.jar:/Users/Shawn/Dev/Greenfoot 3.0.1/Greenfoot.app/Contents/Resources/Java/opencsv-2.3.jar:/Users/Shawn/Dev/Greenfoot 3.0.1/Greenfoot.app/Contents/Resources/Java/xom-1.2.9.jar:/Users/Shawn/Dev/Greenfoot 3.0.1/Greenfoot.app/Contents/Resources/Java/jna-4.2.0.jar:/Users/Shawn/Dev/Greenfoot 3.0.1/Greenfoot.app/Contents/Resources/Java/jna-platform-4.2.0.jar:/Users/Shawn/Dev/Greenfoot 3.0.1/Greenfoot.app/Contents/Resources/Java/guava-17.0.jar:/Users/Shawn/Dev/Greenfoot 3.0.1/Greenfoot.app/Contents/Resources/Java/javassist-3.18.0.jar:/Users/Shawn/Dev/Greenfoot 3.0.1/Greenfoot.app/Contents/Resources/Java/commons-vfs2-2.0.jar:/Users/Shawn/Dev/Greenfoot 3.0.1/Greenfoot.app/Contents/Resources/Java/httpclient-4.1.1.jar:/Users/Shawn/Dev/Greenfoot 3.0.1/Greenfoot.app/Contents/Resources/Java/httpcore-4.1.jar:/Users/Shawn/Dev/Greenfoot 3.0.1/Greenfoot.app/Contents/Resources/Java/httpmime-4.1.1.jar:/Users/Shawn/Dev/Greenfoot 3.0.1/scenarios/java/Othello
-d
/Users/Shawn/Dev/Greenfoot 3.0.1/scenarios/java/Othello/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/Users/Shawn/Dev/Greenfoot 3.0.1/Greenfoot.app/Contents/Resources/Java/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/Users/Shawn/Dev/Greenfoot 3.0.1/scenarios/java/Othello/SimController.java
<---- end of javadoc command ---->
Loading source file /Users/Shawn/Dev/Greenfoot 3.0.1/scenarios/java/Othello/SimController.java...
Constructing Javadoc information...
/Users/Shawn/Dev/Greenfoot 3.0.1/scenarios/java/Othello/OthelloAI.java:52: error: <identifier> expected
            return play.
                        ^
/Users/Shawn/Dev/Greenfoot 3.0.1/scenarios/java/Othello/OthelloAI.java:56: error: illegal start of expression
    public ArrayList<SimPlay> neighbours(SimController controller)
    ^
/Users/Shawn/Dev/Greenfoot 3.0.1/scenarios/java/Othello/OthelloAI.java:56: error: ';' expected
    public ArrayList<SimPlay> neighbours(SimController controller)
                                        ^
/Users/Shawn/Dev/Greenfoot 3.0.1/scenarios/java/Othello/OthelloAI.java:56: error: ';' expected
    public ArrayList<SimPlay> neighbours(SimController controller)
                                                                 ^
/Users/Shawn/Dev/Greenfoot 3.0.1/scenarios/java/Othello/OthelloAI.java:79: error: illegal start of expression
    public ArrayList<SimPlay> neighbours(OthelloController controller)
    ^
/Users/Shawn/Dev/Greenfoot 3.0.1/scenarios/java/Othello/OthelloAI.java:79: error: ';' expected
    public ArrayList<SimPlay> neighbours(OthelloController controller)
                                        ^
/Users/Shawn/Dev/Greenfoot 3.0.1/scenarios/java/Othello/OthelloAI.java:79: error: ';' expected
    public ArrayList<SimPlay> neighbours(OthelloController controller)
                                                                     ^
/Users/Shawn/Dev/Greenfoot 3.0.1/scenarios/java/Othello/OthelloAI.java:226: error: reached end of file while parsing
}
 ^
Standard Doclet version 1.8.0_66
Building tree for all the packages and classes...
Generating /Users/Shawn/Dev/Greenfoot 3.0.1/scenarios/java/Othello/doc/SimController.html...
Generating /Users/Shawn/Dev/Greenfoot 3.0.1/scenarios/java/Othello/doc/package-frame.html...
Generating /Users/Shawn/Dev/Greenfoot 3.0.1/scenarios/java/Othello/doc/package-summary.html...
Generating /Users/Shawn/Dev/Greenfoot 3.0.1/scenarios/java/Othello/doc/constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating /Users/Shawn/Dev/Greenfoot 3.0.1/scenarios/java/Othello/doc/allclasses-frame.html...
Generating /Users/Shawn/Dev/Greenfoot 3.0.1/scenarios/java/Othello/doc/allclasses-noframe.html...
Generating /Users/Shawn/Dev/Greenfoot 3.0.1/scenarios/java/Othello/doc/index.html...
Generating /Users/Shawn/Dev/Greenfoot 3.0.1/scenarios/java/Othello/doc/stylesheet.css...
8 warnings
